--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,14 +11,14 @@ phases:
 
   build:
     commands:
-      - echo "Build started on $(date)"
+      - echo "Build started on" $(date)
       - echo "Building the Docker image..."
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
 
   post_build:
     commands:
-      - echo "Build completed on $(date)"
+      - echo "Build completed on" $(date)
       - echo "Pushing the Docker image to ECR..."
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo "Writing image definition file..."
