--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,26 +7,23 @@ phases:
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
       - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - echo "image will be tagged as:" $IMAGE_TAG
+      - echo "image will be tagged as $IMAGE_TAG"
 
   build:
     commands:
-      - echo "Build started on" $(date)
-      - echo "Building the Docker image..."
+      - echo "Build started on $(date)"
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
 
   post_build:
     commands:
-      - echo "Build completed on" $(date)
-      - echo "DEBUG: REPOSITORY_URI=$REPOSITORY_URI"
-      - echo "DEBUG: IMAGE_TAG=$IMAGE_TAG"
+      - echo "Build completed on $(date)"
+      - echo "REPOSITORY_URI=$REPOSITORY_URI"
+      - echo "IMAGE_TAG=$IMAGE_TAG"
       - docker images
-      - echo "Pushing the Docker image to ECR..."
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - echo "Writing image definition file..."
       - printf '[{"name":"%s","imageUri":"%s"}]' $IMAGE_REPO_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 
 artifacts:
   files:
-     - imagedefinitions.json
+    - imagedefinitions.json
