--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,9 +18,7 @@ phases:
   post_build:
     commands:
       - echo "Build completed on $(date)"
-      - echo "REPOSITORY_URI=$REPOSITORY_URI"
-      - echo "IMAGE_TAG=$IMAGE_TAG"
-      - docker images
+      - echo "$IMAGE_TAG"
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - printf '[{"name":"%s","imageUri":"%s"}]' $IMAGE_REPO_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 
