--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,6 +19,7 @@ phases:
     commands:
       - echo "Build completed on $(date)"
       - echo "$IMAGE_TAG"
+      - echo "Pushing $REPOSITORY_URI:$IMAGE_TAG"
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - printf '[{"name":"%s","imageUri":"%s"}]' $IMAGE_REPO_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 
