--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,25 +3,32 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - echo "Logging into AWS ECR"
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - echo "==== Pre-Build Phase ===="
+      - echo "Logging into AWS ECR..."
+      - "aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com"
       - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
       - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - echo "image will be tagged as $IMAGE_TAG"
+      - echo "Repository URI: $REPOSITORY_URI"
+      - echo "Image tag: $IMAGE_TAG"
 
   build:
     commands:
-      - echo "Build started on $(date)"
-      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - echo "==== Build Phase ===="
+      - echo "Building Docker image..."
+      - docker build --progress=plain -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
+      - echo "Docker image built and tagged successfully."
 
   post_build:
     commands:
-      - echo "Build completed on $(date)"
-      - echo "$IMAGE_TAG"
-      - echo "Pushing $REPOSITORY_URI:$IMAGE_TAG"
+      - echo "==== Post-Build Phase ===="
+      - echo "Pushing Docker image to ECR..."
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - printf '[{"name":"%s","imageUri":"%s"}]' $IMAGE_REPO_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - echo "Docker image pushed successfully."
+      - echo "Creating imagedefinitions.json for ECS deployment..."
+      - printf '[{"name":"my_node_project","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - echo "imagedefinitions.json created:"
+      - cat imagedefinitions.json
 
 artifacts:
   files:
