--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-    "name": "ci-cd-demo-app",
-    "version": "1.0.0",
-    "description": "Simple Node.js app for CI/CD pipeline learning",
-    "main": "app.js",
-    "scripts": {
-        "start": "node app.js"
-    },
-    "author": {
-        "name": "Ghani"
-    },
-    "license": "ISC",
-    "dependencies": {
-        "express": "^5.2.1"
-    }
+  "name": "ci-cd-demo-app",
+  "version": "1.0.0",
+  "description": "Simple Node.js app for CI/CD pipeline learning",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "author": "Ghani",
+  "license": "ISC",
+  "dependencies": {},
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
